# Classif_Palm_oil

./: README.md  pyproject.toml  readthedocs.yaml  setup.py
docs/: requirements.txt
docs/source/: conf.py  doc.rst  index.rst  introduction.rst
src/Classif_Palm_Oil/: __init__.py  dataset.py  evaluate.py  model.py  run.py  train.py
